@@ -1,3 +1,8 @@
+2008-03-10  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/35099
+	* g++.dg/gomp/pr35099.C: New test.
+
 2008-03-10  Uros Bizjak  <ubizjak@gmail.com>
 
 	Backport from mainline:
